--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,13 @@
   mod_gzip_item_exclude mime ^image/.*
   mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 </ifModule>
+
+<IfModule mod_deflate.c>
+	# these are known to be safe with MSIE 6
+	AddOutputFilterByType DEFLATE text/html text/plain text/xml
+
+	# everything else may cause problems with MSIE 6
+	AddOutputFilterByType DEFLATE text/css
+	AddOutputFilterByType DEFLATE application/x-javascript application/javascript application/ecmascript
+	AddOutputFilterByType DEFLATE application/rss+xml
+</IfModule>
