--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
     "jquery": "~2.1.1",
     "jquery_old": "jquery#1.11.1",
     "lodash": "~2.4.1",
-    "polymer": "Polymer/polymer#~0.4.1"
+    "polymer": "Polymer/polymer#~0.4.1",
+    "es5-shim": "~4.0.3",
+    "modernizr": "~2.8.3",
+    "jquery-ui": "~1.11.1",
+    "core-signals": "Polymer/core-signals#~0.4.1"
   }
 }
